--- a/public/scss/typography.scss
+++ b/public/scss/typography.scss
@@ -1,6 +1,6 @@
 *{
     /*Sets default font settings*/
     font-family: "Segoe UI", Arial, serif;
-    font-size: 1em;
+    font-size: 2.5vh;
     font-weight: 550; /* 400 is normal, 700 is bold*/
 }
